@@ -1,6 +1,7 @@
 Revision history for Perl extension Plack-Middleware-Pjax
 
 {{$NEXT}}
+    - switch to Marpa::R2 in favor of deprecated Marpa::HTML
 
 1.113400  2011-12-06 05:46:50 Europe/Paris
     - pod fix! thanks @ioncache / MJubenville
